# E-Voting

./: .env.example  .env.production.template  .gitignore  README.md  gunicorn_config.py  pyproject.toml  requirements.txt
app/: admin.py  apps.py  email_utils.py  encryption.py  forms.py  signals.py
app/actions/: elections_actions.py
app/management/: __init__.py
app/management/commands/: calculate_results.py  check_vote_security.py  seed.py  test_email.py  test_vote_urls.py  test_voting_flow.py
app/migrations/: 0001_initial.py
app/models/: __init__.py  base.py  candidate.py  election.py  invitation.py  party.py  profile.py  user_extensions.py  vote.py
app/signals/: election_signals.py
app/static/app/: styles.css
app/static/app/icons/: site.webmanifest
app/templates/account/: email.html  email_confirm.html  signup.html  verification_sent.html
app/templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt
app/templates/app/: index.html  profile.html
app/templates/app/candidates/: create.html  delete.html  detail.html  edit.html
app/templates/app/elections/: create.html  detail.html  edit.html  list.html  verify_results.html
app/templates/registration/: login.html
app/templatetags/: time_filters.py
app/tests/: __init__.py  test_base.py  test_candidate_model.py  test_election_model.py  test_models.py  test_party_model.py  test_urls.py  test_vote_model.py
app/views/: __init__.py  auth.py  base.py  candidate.py  election.py  invitation.py  vote.py
project/: settings.py  urls.py
(+19 files in other folders)
